feat: add color of theme

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#4DBA87">
   <link rel="stylesheet" href="css/style.css">
   <link rel="manifest" href="./manifest.json">
   <title>Home - Service Worker Example</title>
